Closed Bug 1034081 Opened 12 years ago Closed 11 years ago

VP9 sample video skips the first 5 seconds of content

Categories

(Core :: Audio/Video, defect)

29 Branch
x86_64
Windows 8.1
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla42
Tracking Status
firefox41 --- verified
firefox42 --- verified

People

(Reporter: Fanolian+BMO, Assigned: j)

References

Details

(Keywords: regression)

Attachments

(1 file)

User Agent: Mozilla/5.0 (Windows NT 6.3; WOW64; rv:33.0) Gecko/20100101 Firefox/33.0 (Beta/Release) Build ID: 20140703030200 Steps to reproduce: Open http://hg.mozilla.org/mozilla-central/raw-file/d2dac18d0562/content/media/test/vp9cake.webm found in bug 833023#30. Actual results: 1. On first playback, seek bar goes all to the right. 2. Subsequent playback skips the first 5 seconds of content. Expected results: No skipping of content. regression range for problem 2: Last good revision: 12ea03a70243 (2013-12-11) First bad revision: 1ad9af3a2ab8 (2013-12-12) Pushlog: http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=12ea03a70243&tochange=1ad9af3a2ab8
Blocks: 949525
Keywords: regression
The first Nightly that observes issue 1 (seek bar problem) is 2012-12-03 build (rev 8648aa476eef) which predates VP9 implementation. vp9cake.webm plays with audio only on this build and the seek bar goes all to the right. Prior to this Nightly the file cannot be played at all. Something forgot to mention in original post: In current Nightly, if I save vp9cake.webm locally and play it in Nightly again, problem 1 is gone but problem 2 persists.
The problem 2 seems to be caused by Bug 945863
Blocks: 945863
Status: UNCONFIRMED → NEW
Ever confirmed: true
Flags: needinfo?(j)
Assignee: nobody → j
Flags: needinfo?(j)
Attachment #8633454 - Flags: review?(giles)
Attachment #8633454 - Flags: review?(giles) → review+
any chance to land this and possibly also push to stable branches?
Flags: needinfo?(giles)
Leaving myself on needinfo to see about uplifting to aurora later this week.
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla42
Comment on attachment 8633454 [details] [diff] [review] Bug-1034081-Never-seek-before-startTime.patch Approval Request Comment [Feature/regressing bug #]: Bug 945863 [User impact if declined]: Some videos fail to start [Describe test coverage new/current, TreeHerder]: Landed on nightly last week, passing playback mochitests. [Risks and why]: I believe risk is acceptable. This codepath doesn't get a huge amount of use, but it's an annoying bug for people who are using WebM with HTML5 video. Rest of the code hasn't changed lately, so chance of side-effect is small and backout in case of regression would be easy. [String/UUID change made/needed]: None.
Flags: needinfo?(giles)
Attachment #8633454 - Flags: approval-mozilla-aurora?
Comment on attachment 8633454 [details] [diff] [review] Bug-1034081-Never-seek-before-startTime.patch This code has been in m-c for a few days and existing mochitests pass. Let's land it on Aurora channel.
Attachment #8633454 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
QA Whiteboard: [good first verify]
I have successfully reproduced the bug in firefox Nightly 33.0a1 (2014-07-03) with windows 10 PRO N (64 bit) Verified as fixed with 43.0a1 as comment 0 Build ID: 20150821030204 Mozilla/5.0 (Windows NT 10.0; WOW64; rv:43.0) Gecko/20100101 Firefox/43.0 [testday-20150821]
Reproduced this bug with Nightly 33.0a1 (2014-07-03) by following comment 0 on Linux x64 This Bug is now verified as fixed on Latest Firefox Nightly 43.0a1 (2015-08-27) (Build ID: 20150827030213) and Latest Firefox Aurora 42.0a2 (2015-08-27) (Build ID: 20150827004003) Mozilla/5.0 (X11; Linux x86_64; rv:43.0) Gecko/20100101 Firefox/43.0 Mozilla/5.0 (X11; Linux x86_64; rv:42.0) Gecko/20100101 Firefox/42.0 As it is also verified on Windows (Comment 12), Marking it as verified!
Status: RESOLVED → VERIFIED
QA Whiteboard: [good first verify] → [good first verify][bugday-20150826]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: