Bug 1034081 - Never seek before startTime. r=rillian

Only adjust seek target up to startTime